# skmysql

./: .gitignore  .ocamlformat  README.md  dune-project  ezmysql.opam  skmysql.opam  skmysql_ppx.opam  skmysql_ppx_deriving.opam
.github/workflows/: main.yml
example/: dune  ezmysql_example.ml  skmysql_example.ml
example/prepared/: dune  prepared.ml
ppx/: dune  skmysql_ppx.ml
ppx_deriving/: attrs.ml  dune  ppx_deriving_skmysql.ml
src/: dune  ezmysql.ml  ezmysql.mli  skmysql.ml  skmysql.mli
